# DistributedAccelerometerDataProcessingSystem

./: .gitignore  CMakeLists.txt  README.md
common/include/: accel_module.hpp  accel_packet.hpp  json_utils.hpp  logger.hpp  tcp_socket.hpp
common/src/: json_utils.cpp  logger.cpp  tcp_socket.cpp
node_a/: CMakeLists.txt
node_a/src/: main.cpp
node_b/: CMakeLists.txt
node_b/src/: main.cpp
server/: CMakeLists.txt
server/src/: main.cpp
